# payment-tracker

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  setup-github-runner.sh  setup-github.sh  simple_demo.rs  simple_test.rs  test_postgres_integration.rs  test_simple_vnd.rs  test_vietnamese_parser.rs  verify_app.sh
.github/workflows/: ci-cd.yml
configs/: .env.example  config_example.toml
docs/: CI_CD_SUMMARY.md  COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT.md  EMAIL_SETUP_INSTRUCTIONS.md  FINAL_GITHUB_README.md  GITHUB_PUSH_GUIDE.md  GITHUB_SUCCESS.md  K3S_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  SETUP_GITHUB_RUNNER.md  SETUP_RUNNER_NOW.md  VERIFICATION.md  VIB_BANK_SPECIALIZATION_SUMMARY.md  email_pattern_analysis.md
emails/: debug_vnd.html  real_email_1.eml  real_email_2.eml  real_email_3.eml  test_email.txt  test_html_email.txt
examples/: README.md  daily_vib_tracker.rs  extract_vib_transaction_id.rs  final_demo.rs  init_postgres.rs  real_email_test.rs  simple_currency_test.rs
frontend/: Dockerfile  README.md  next.config.ts  nginx.conf  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AddTransactionForm.tsx  FetchEmailsButton.tsx  Header.tsx  IncomeExpenseChart.tsx  Layout.tsx  LineChart.tsx  MetricCard.tsx  Sidebar.tsx  TransactionTable.tsx  UserTable.tsx
frontend/components/ui/: radio-group.tsx
frontend/lib/: api.ts
k8s/: deployment.yaml  frontend-deployment.yaml  payment-tracker.yaml  postgresql-existing.yaml  postgresql-nodeport.yaml  postgresql.yaml  pvc.yaml  secrets.yaml  setup-k3s.sh  simple-deployment.yaml  supabase-secret.yaml  update-runner.yaml
k8s/github-runner/: github-runner-repo.yaml  github-runner-simple.yaml
scripts/: QUICK_RUNNER_SETUP.sh  deploy-to-k3s.sh  docker-entrypoint.sh  example_usage.sh  push-to-github.sh  test_app.sh  test_email_setup.sh  verify_with_email.sh
src/: config.rs  currency.rs  db.rs  email.rs  email_backup.rs  email_broken.rs  lib.rs  main.rs  models.rs  transactions.rs  web.rs
supabase/.temp/: pooler-url  project-ref
tests/: README.md  debug_base64.rs  debug_currency.rs  decode_email.rs  simple_currency_test.rs  simple_demo.rs  simple_test.rs  test_email_parsing.rs  test_html_parser.rs  test_parser.rs  test_simple_vnd.rs  test_vib_parser.rs  test_vietnamese_bank_email.rs  test_vietnamese_parser.rs  test_vnd_parsing.rs  test_wells_fargo.rs
tests/integration/: test_db_filters.rs
