[package]
name = "payment-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
tabled = { version = "0.14", features = ["derive"] }
toml = "0.8"
imap = "2.1.0"
mailparse = "0.14"
native-tls = "0.2"
base64 = "0.21"
encoding = "0.2"
mime = "0.3"
